<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentOtros"
    android:background="@color/grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/azul_claro"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:elevation="8dp"
            android:gravity="center"
            android:text="@string/puntua"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <RatingBar
            android:id="@+id/otroRating"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:elevation="0dp"
            android:filterTouchesWhenObscured="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:longClickable="true"
            android:numStars="5"
            android:rating="2"
            android:stepSize="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:elevation="8dp"
                android:gravity="center"
                android:text="@string/ubicacion"
                android:textColor="@color/blanco"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <ImageView
                android:id="@+id/imagenMapa"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/mapa"
                android:elevation="8dp"
                android:src="@drawable/map" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/oficiales"
            android:textColor="@color/blanco"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="serif" />


    </LinearLayout>


</FrameLayout>
